@@ -25,6 +25,8 @@ library:
   class.preorder.of_class.intro  ~>  preorder.intro_of_class
   class.order.of_class.intro  ~> order.intro_of_class
 
+* The Eisbach 'method' command now takes an optional description for
+display with print_methods, similar to the 'method_setup' command.
 
 *** Document preparation ***
 
